# turing

./: .clang-format  .gitignore  README.md  c_src.sh  meson.build
.cache/clangd/index/: common.h.71AAE7FFF9AC16FE.idx  instruction.c.FDDE0D41BC8EEB45.idx  instruction.h.AFB6A1AFB093566F.idx  main.c.8FE4D1D132DC8618.idx  mem.c.C9DAFF5D3962AE0B.idx  mem.h.76BCAF98C2EB1C93.idx  state.c.1621E18E56F3FD57.idx  state.h.ACEA9916A2B2C8BB.idx  tape.c.AE9302CF84A0744E.idx  tape.h.D7B1314BCB72E2DF.idx  turing.c.572FE52583381F7B.idx  turing.h.4301DDA8D64510B8.idx  utils.c.CF71B879437382B2.idx  utils.h.1D138F7A2EB57824.idx
include/: common.h  instruction.h  mem.h  state.h  tape.h  turing.h  utils.h
src/: instruction.c  main.c  mem.c  state.c  tape.c  turing.c  utils.c
tm/: 100x+10.tm  add10.tm  tenTimes.tm
